--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
+   
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
